<resources>
    <string name="app_name">FDL Sandbox</string>

    <string name="dynamic_link_domain">kuta9.app.goo.gl</string>
    <string name="deep_link">https://www.sample.com/</string>

    <string name="btn_txt_invite">Send invitations!</string>
    <string name="btn_txt_gen_fdl">Generate FDL</string>
    <string name="btn_txt_ok">OK</string>
    <string name="btn_txt_force_crash">Force Crash</string>
    <string name="btn_txt_web_view">WebView</string>

    <string name="switch_txt_catch_crash">Catch Crash</string>
    <string name="switch_txt_webview_override">Override WebView Links</string>

    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is terrific, give it a try and get $5 off!</string>
    <string name="invitation_deep_link">https://www.sample.com/invites</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>

    <string name="invitation_received">You received an Invitation!</string>
    <string name="txt_deep_link_default">Deep Link not set</string>
    <string name="txt_invite_id_default">Invitation ID not set</string>
    <string name="txt_referrer_id_default">Referrer ID not set</string>
    <string name="txt_fdl_long">Long FDL will appear here</string>
    <string name="txt_fdl_short">Short FDL will appear here</string>
    <string name="txt_fdl_short_empty">Short FDL is empty</string>

</resources>
